--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="uft-8">
         <link rel="stylesheet" href="/styles/app.css">
         <title>Curriculum Jose Arcila</title>
+        <style>h1{background-color: red;}</style>
     </head>
     <body>
         <h1>Curriculum Jose Arcila</h1>
