--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="uft-8">
-        <link rel="stylesheet" href="/styles/app.css">
+        <link rel="stylesheet" href="styles/app.css">
         <title>Curriculum Jose Arcila</title>
         <style>h1{background-color: red;}</style>
     </head>
