--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <meta charset="uft-8">
-        <link rel="stylesheet" href="\styles\app.css">
+        <link rel="stylesheet" href="/styles/app.css">
         <title>Curriculum Jose Arcila</title>
+        <script src="js/app.js"></script>
+
     </head>
     <body>
         <h1>Curriculum Jose Arcila</h1>
+        <aside>Cesar Manuel va a renunciar</aside>
+        <section>Datos laborales</section>
     </body>
 </html>
