--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles/app.css">
         <title>Curriculum Jose Arcila</title>
         <style>h1{background-color: red;}</style>
+        <script src = "js/app.js"></script>
     </head>
     <body>
         <h1>Curriculum Jose Arcila</h1>
