--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h1>Curriculum Jose Arcila</h1>
         <aside>Cesar Manuel va a renunciar</aside>
         <section>Datos laborales</section>
+        <p id="amix"></p>
     </body>
 </html>
