--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <link rel="stylesheet" href="styles/app.css">
         <title>Curriculum Jose Arcila</title>
         <style>h1{background-color: red;}</style>
-        <script src = "js/app.js"></script>
+        <script src = "js/app.js" async defer ></script>
     </head>
     <body>
         <h1>Curriculum Jose Arcila</h1>
-        <aside>Cesar Manuel va a renunciar</aside>
+        <aside class="personal-info" style="background-color: blue">Cesar Manuel va a renunciar
+        <h2>No me mates</h2>
+        </aside>
         <section>Datos laborales</section>
         <p id="amix"></p>
+        
     </body>
 </html>
